# partypigeon

./: .gitignore  CMakeLists.txt  Makefile  README.md  oldmake  partypigeon
include/: protocol.h  wing_protocol.h
src/: main.c
src/partypigeon/: main.c
src/partypigeon/client/: CMakeLists.txt  main.c
src/partypigeon/server/: CMakeLists.txt  main.c
src/wing/: CMakeLists.txt  protocol.c  wing_protocol.c
